--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <input name="maiusculo" type="checkbox">
+                    <label for="maiusculo">Letras maiúsculas</label>
                 </div>
             </div>
         </div>
