--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <input name="maiusculo" type="checkbox">
                     <label for="maiusculo">Letras maiúsculas</label>
+                    <input name="minusculo" type="checkbox">
+                    <label for="minusculo">Letras minúsculas</label>
                 </div>
             </div>
         </div>
