--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 class="titulo-principal">Gerador de senhas</h2>
             <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
         </div>
-        <div class="conteudo-senha">
+        <input name="senha" type="text" id="campo-senha" readonly>
             <label for="senha">Senha</label>
             <input name="senha" type="text" id="campo-senha">
         </div>
