--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <h2 class="titulo-principal">Gerador de senhas</h2>
             <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
         </div>
-        <input name="senha" type="text" id="campo-senha" readonly>
+        <div class="conteudo senha">
+        
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha">
+            <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -47,6 +48,7 @@
                     <div class="parametro-senha-checkbox">
                       <input name="simbolo" type="checkbox">
                       <label for="simbolo">Símbolos</label>
+                    </div>
                     </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
