--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body>
     <section class="conteudo">
         <div class="conteudo-titulo">
-            <img src="unlock (2).svg" alt="cadeado fechado">
+            <img src="unlock.svg" alt="cadeado fechado">
             <h2 class="titulo-principal">Gerador de senhas</h2>
             <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
         </div>
-        <div class="conteudo senha">
-        
+        <div class="conteudo-senha">
             <label for="senha">Senha</label>
             <input name="senha" type="text" id="campo-senha" readonly>
         </div>
@@ -30,38 +29,38 @@
                         <p class="parametro-senha__texto">12</p>
                         <button class="parametro-senha__botao">+</button>
                     </div>
-                </div>                
+                </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
-                    <input name="maiusculo" type="checkbox">
-                    <label for="maiusculo">Letras maiúsculas</label>
+                        <input name="maiusculo" type="checkbox" class="checkbox" checked>
+                        <label for="maiusculo">Letras maiúsculas</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                    <input name="minusculo" type="checkbox">
-                    <label for="minusculo">Letras minúsculas</label>
+                        <input name="minusculo" type="checkbox" class="checkbox">
+                        <label for="minusculo">Letras minúsculas</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                    <input name="numero" type="checkbox">
-                    <label for="numero">Números</label>
+                        <input name="numero" type="checkbox" class="checkbox">
+                        <label for="numero">Números</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                      <input name="simbolo" type="checkbox">
-                      <label for="simbolo">Símbolos</label>
+                        <input name="simbolo" type="checkbox" class="checkbox">
+                        <label for="simbolo">Símbolos</label>
                     </div>
-                    </div>
+                </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
                     <div class="forca fraca"></div>
-                        <div class="parametro-senha-textos">
+                    <div class="parametro-senha-textos">
                         <p>Fraca</p>
                         <p>Média</p>
                         <p>Forte</p>
-                        </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
