--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </section>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
